fix(table): fix long strings in table cells were incorrectly truncated (#1647)
* fix(table): fix long strings in table cells were incorrectly truncated

* fix(table): fix Unexpected duplicate "display"

--- a/src/Table/styles/common.less
+++ b/src/Table/styles/common.less
@@ -166,11 +166,12 @@
     border-style: solid;
     border-width: 0;
     border-color: @table-border-color;
-    display: block;
     overflow: hidden;
     position: absolute;
     white-space: normal;
     background: @table-body-background;
+    display: table;
+    table-layout: fixed;
 
     &.first {
       border-left-width: 0;
